--- a/carrosel/carrosel.html
+++ b/carrosel/carrosel.html
@@ -10,27 +10,60 @@
     <main>
       <section>
         <div class="carrosel">
-          <div class="imagens">
-            <img
-              src="https://assets.xboxservices.com/assets/07/40/0740b29a-3640-47f3-889f-1317307ce5f9.jpg?n=508261_Gallery-0_1_1350x759.jpg"
-              alt=""
-              width="400px"
-            />
-            <img
-              src="https://assets.xboxservices.com/assets/2c/67/2c67995a-b477-4e20-91d2-af48415d6ad7.jpg?n=508261_Gallery-0_2_1350x759.jpg"
-              alt=""
-              width="400px"
-            />
-            <img
-              src="https://assets.xboxservices.com/assets/07/94/079472a3-1521-4675-a2c7-9a976a56ef7b.jpg?n=508261_Gallery-0_3_1350x759.jpg"
-              alt=""
-              width="400px"
-            />
-            <img
-              src="https://assets.xboxservices.com/assets/3c/24/3c24e2f7-68e6-4821-86fd-da40f58eeb7a.jpg?n=508261_Gallery-0_4_1350x759.jpg"
-              alt=""
-              width="400px"
-            />
+          <div class="setas direita">&#62;</div>
+          <div class="setas esquerda">&#60;</div>
+          <div class="container">
+            <div class="imagens">
+              <div class="imagem">
+                <img
+                  src="https://assets.xboxservices.com/assets/fa/b8/fab86afd-63d6-45a9-862f-798e5e45cda2.jpg?n=111101_Gallery-0_4_1350x759.jpg"
+                  alt=""
+                  width="300px"
+                />
+              </div>
+              <div class="imagem">
+                <img
+                  src="https://assets.xboxservices.com/assets/ba/40/ba40e598-da1c-4034-9117-bcc1c1086f6d.jpg?n=111101_Gallery-0_18_1350x759.jpg"
+                  alt=""
+                  width="300px"
+                />
+              </div>
+              <div class="imagem">
+                <img
+                  src="https://assets.xboxservices.com/assets/07/51/07516d09-f99c-4330-8e6d-f93b66bec4c8.jpg?n=Xbox-Wireless-Controller_Gallery-0_246801-3_1350x759.jpg"
+                  alt=""
+                  width="300px"
+                />
+              </div>
+              <div class="imagem ativo">
+                <img
+                  src="https://assets.xboxservices.com/assets/ed/bf/edbf1336-0b0c-4167-8824-570923137056.jpg?n=111101_Gallery-0_25_1350x759.jpg"
+                  alt=""
+                  width="300px"
+                />
+              </div>
+              <div class="imagem">
+                <img
+                  src="https://assets.xboxservices.com/assets/44/7d/447d7ee5-c18b-4f9d-94a6-13659f339d0c.jpg?n=Xbox-Wireless-Controller_Gallery-0_Deep-Pink-3_1350x759.jpg"
+                  alt=""
+                  width="300px"
+                />
+              </div>
+              <div class="imagem">
+                <img
+                  src="https://assets.xboxservices.com/assets/31/58/31580571-d688-4255-92bb-80d89ebee0c6.jpg?n=111101_Gallery-0_10_1350x759.jpg"
+                  alt=""
+                  width="300px"
+                />
+              </div>
+              <div class="imagem">
+                <img
+                  src="https://assets.xboxservices.com/assets/1b/82/1b8254ab-e3cd-4443-8494-2478696632e7.jpg?n=111101_Gallery-0_31_1350x759.jpg"
+                  alt=""
+                  width="300px"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </section>
